--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/upload.html">English</a>
+                        <a class="nav-link" href="#">English</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Español</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-dark my-2 my-sm-0" type="button">My Profile</button>
+                    <button class="btn btn-dark my-2 my-sm-0" type="button">
+                        <img class="mr-2 border rounded-circle" src="./assets/user-icon.jpg" width="30" height="30" alt="user icon">
+                        My Profile
+                    </button>
                 </form>
             </div>
         </nav>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
             <div class="d-flex align-items-center">
                 <img src="./assets/simplebook.png" width="70" height="50" class="d-inline-block align-top" alt="">
                 <h1 class="ml-2">Shuffle</h1>
@@ -48,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/classCode.html">
                         <button class="btn btn-secondary my-2 my-sm-0" type="button">Enter a class code</button>
                     </a>
                 </li>
@@ -69,27 +72,54 @@
             </form>
         </div>
     </nav>
-    <div class="main-content container mx-auto w-50 mt-5">
-        <div class="row">
-            <div class="col-sm">
-                <img src="./assets/textbook1.jpeg" width="200" height="300" alt="cover of a textbook">
-            </div>
-            <div class="col-sm">
-                <img src="./assets/textbook2.jpeg" width="200" height="300" alt="cover of a textbook">
-            </div>
-            <div class="col-sm">
-                <img src="./assets/textbook3.jpeg" width="200" height="300" alt="cover of a textbook">
-            </div>
+    <div class="main-content border-top">
+        <div class="ml-3 mt-2">
+            <h3>Marketplace</h3>
         </div>
-        <div class="row">
-            <div class="col-sm">
-                <img src="./assets/textbook4.jpeg" width="200" height="300" alt="cover of a textbook">
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="./assets/textbook1.jpeg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">Corporate Design</h4>
+                    <p class="text-center">Sold by: <em>Ashtart Saar</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/textbook2.jpeg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">Annual Report</h4>
+                    <p class="text-center">Sold by: <em>Bernard Hussein</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/textbook3.jpeg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">Company Report</h4>
+                    <p class="text-center">Sold by: <em>Waverly Ronan</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">DWTMIM</h4>
+                    <p class="text-center">Sold by: <em>Jeff Johnson</em></p>
+                </div>
             </div>
-            <div class="col-sm">
-                <img src="./assets/textbook5.jpeg" width="200" height="300" alt="cover of a textbook">
-            </div>
-            <div class="col-sm">
-                <img src="./assets/textbook6.jpeg" width="200" height="300" alt="cover of a textbook">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">DWTMIM</h4>
+                    <p class="text-center">Sold by: <em>Cameron Deputy</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/textbook5.jpeg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">Business Ed</h4>
+                    <p class="text-center">Sold by: <em>Ale Villem</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/textbook6.jpeg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">Report & Design</h4>
+                    <p class="text-center">Sold by: <em>Salomon Hilde</em></p>
+                </div>
+                <div class="col-sm">
+                    <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
+                    <h4 class="text-center">DWTMIM</h4>
+                    <p class="text-center">Sold by: <em>Mitchell Markoff</em></p>
+                </div>
             </div>
         </div>
     </div>
