--- a/upload.html
+++ b/upload.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Shuffle - Upload a textbook</title>
 </head>
 <style>
 #wrapper {
@@ -40,16 +40,16 @@ nav {
 }
 #upload {
     float: left;
-    margin-left: 30vw
+    margin-left: 40vw
 }
 #book {
     float: left;
-
-    padding-left: 20px;}
+    margin-left: 15vw;
+    }
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/index.html">
             <div class="d-flex align-items-center">
                 <img src="./assets/simplebook.png" width="70" height="50" class="d-inline-block align-top" alt="">
                 <h1 class="ml-2">Shuffle</h1>
