--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <button class="btn btn-dark my-2 my-sm-0" type="button">
-                        <img class="mr-2 border rounded-circle" src="./assets/user-icon.jpg" width="30" height="30" alt="user icon">
+                        <img class="mr-2 border rounded-circle" src="./assets/user-icon.jpg" width="30" height="30"
+                            alt="user icon">
                         My Profile
                     </button>
                 </form>
@@ -94,9 +95,11 @@
                     <p class="text-center">Sold by: <em>Waverly Ronan</em></p>
                 </div>
                 <div class="col-sm">
-                    <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
-                    <h4 class="text-center">DWTMIM</h4>
-                    <p class="text-center">Sold by: <em>Jeff Johnson</em></p>
+                    <a href="./start_shuffle.html">
+                        <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
+                        <h4 class="text-center">DWTMIM</h4>
+                        <p class="text-center">Sold by: <em>Jeff Johnson</em></p>
+                    </a>
                 </div>
             </div>
             <div class="row">
