--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/upload.html">
+                    <a class="nav-link" href="./upload.html">
                         <button class="btn btn-secondary my-2 my-sm-0" type="button">Upload a textbook</button>
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/classCode.html">
+                    <a class="nav-link" href="./classCode.html">
                         <button class="btn btn-secondary my-2 my-sm-0" type="button">Enter a class code</button>
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="./about.html">
                         <button class="btn btn-secondary my-2 my-sm-0" type="button">About</button>
                     </a>
                 </li>
