--- a/upload.html
+++ b/upload.html
@@ -49,7 +49,7 @@ nav {
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-header">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="./index.html">
             <div class="d-flex align-items-center">
                 <img src="./assets/simplebook.png" width="70" height="50" class="d-inline-block align-top" alt="">
                 <h1 class="ml-2">Shuffle</h1>
@@ -61,7 +61,7 @@ nav {
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/upload.html">Upload a Textbook <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./upload.html">Upload a Textbook <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
