--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-dark my-2 my-sm-0" type="button">
-                        <img class="mr-2 border rounded-circle" src="./assets/user-icon.jpg" width="30" height="30"
-                            alt="user icon">
-                        My Profile
-                    </button>
+                    <a href="./my_profile.html">
+                        <button class="btn btn-dark my-2 my-sm-0" type="button">
+                            <img class="mr-2 border rounded-circle" src="./assets/user-icon.jpg" width="30" height="30"
+                                alt="user icon">
+                            My Profile
+                        </button>
+                    </a>
                 </form>
             </div>
         </nav>
