--- a/start_shuffle.html
+++ b/start_shuffle.html
@@ -58,8 +58,10 @@
     <div class="container main-content">
         <div class="row mt-5">
             <div class="col-sm">
-                <img class="border rounded-circle" src="./assets/user-icon.jpg" width="70" height="70" alt="user icon">
-                <p class="text-center font-weight-bold">Jeff Johnson</p>
+                <a href="./another_user.html">
+                    <img class="border rounded-circle" src="./assets/user-icon.jpg" width="70" height="70" alt="user icon">
+                    <p class="text-center font-weight-bold">Jeff Johnson</p>
+                </a>
                 <img src="./assets/DWTMIM.jpg" width="200" height="280" alt="cover of a textbook">
             </div>
         </div>
